<resources>
    <string name="app_name">Expresiones Regulares</string>
    <string name="titulo">Inicio de Sesion</string>
    <string name="name">Nombre</string>
    <string name="name_user">User</string>
    <string name="passworf">password</string>

    <!--HINT -->
    <string name="name_h">Ingresa tu nombre</string>
    <string name="user_h">Ingresa tu Usuario</string>

    <!--BOTONES  -->
    <string name="validar">Validar</string>


    <!-- ACTIVITY 2 -->
            <string name="titulo2">Registro de clientes</string>
            <string name="btn_registrar">Registrar</string>
    
    <!-- ACTIVITY 3 -->
    <string name="titulo3">Datos de clientes</string>
    <string name="btn_modificar">Modificar</string>

</resources>